Fix compilation of V8DependentRetained and JSDependentRetained. https://bugs.webkit.org/show_bug.cgi?id=97955

Patch by Elliott Sprehn <esprehn@chromium.org> on 2012-09-28
Reviewed by Kentaro Hara.

Fix bad usage of putDirect and removeDirect from JSDependentRetained and fix
incorrect assumptions about how weak handles work in V8. This is refactored
out of the patch on http://wkbug.com/93661

No tests needed, this just fixes the compile and wrong usage of ScopedPersistent.

* bindings/js/JSDependentRetained.h:
(WebCore::JSDependentRetained::JSDependentRetained):
(WebCore::JSDependentRetained::retain):
(WebCore::JSDependentRetained::release):
(JSDependentRetained):
* bindings/v8/V8DependentRetained.h:
(WebCore::V8DependentRetained::V8DependentRetained):
(WebCore::V8DependentRetained::retain):
(WebCore::V8DependentRetained::weakCallback):

Canonical link: https://commits.webkit.org/115972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129968 268f45cc-cd09-0410-ab3c-d52691b4dbfc